# python-project-83

./: Dockerfile  Makefile  README.md  database.sql  pyproject.toml  setup.cfg  test_build.sh
page_analyzer/: app.py  utils.py
page_analyzer/templates/: index.html  url.html  urls.html
